# estades-delta

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  repository.toml  towncrier.toml
.github/workflows/: backend.yml  changelog.yml  config.yml  frontend.yml  main.yml  varnish.yml
backend/: CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  bobtemplate.cfg  instance.yaml  pyproject.toml
backend/news/: 1.feature  2.feature
backend/scripts/: create_site.py
backend/src/estades/delta/: __init__.py  celery_app.py  configure.zcml  dependencies.zcml  profiles.zcml  testing.py  zope_context.py
backend/src/estades/delta/adapters/: __init__.py  beds24.py  embedding_store.py  llm.py  messaging.py  stripe_connect.py
backend/src/estades/delta/api/: __init__.py  approve_response.py  configure.zcml  conversations.py  messaging_webhook.py
backend/src/estades/delta/behaviors/: __init__.py  configure.zcml  knowledge_base.py
backend/src/estades/delta/content/: __init__.py  booking.py  configure.zcml  guest_conversation.py  guest_message.py  owner.py  property.py
backend/src/estades/delta/controlpanels/: configure.zcml
backend/src/estades/delta/indexers/: __init__.py  configure.zcml
backend/src/estades/delta/locales/: estades.delta.pot
backend/src/estades/delta/locales/en/LC_MESSAGES/: estades.delta.po
backend/src/estades/delta/profiles/default/: browserlayer.xml  catalog.xml  import_steps.xml  metadata.xml  types.xml  workflows.xml
backend/src/estades/delta/profiles/default/registry/: main.xml  plone.base.interfaces.controlpanel.IMailSchema.xml  plone.base.interfaces.controlpanel.ISiteSchema.xml
backend/src/estades/delta/profiles/default/types/: Booking.xml  GuestConversation.xml  GuestMessage.xml  Owner.xml  Property.xml
backend/src/estades/delta/profiles/default/workflows/booking_workflow/: definition.xml
backend/src/estades/delta/profiles/default/workflows/guest_conversation_workflow/: definition.xml
backend/src/estades/delta/serializers/: configure.zcml
backend/src/estades/delta/setuphandlers/: __init__.py  demo_content.py  initial.py
backend/src/estades/delta/tasks/: __init__.py  embeddings.py  pipeline.py  scheduled.py
backend/src/estades/delta/templates/: __init__.py
backend/src/estades/delta/templates/messages/: post_checkin.j2  pre_checkin.j2  welcome.j2
backend/src/estades/delta/upgrades/: __init__.py  configure.zcml
backend/src/estades/delta/vocabularies/: __init__.py  configure.zcml
backend/tests/: conftest.py
backend/tests/adapters/: test_adapter_factories.py  test_beds24_stub.py  test_embedding_store.py  test_llm.py  test_messaging.py  test_stripe_stub.py
backend/tests/api/: test_hmac.py
backend/tests/behaviors/: test_knowledge_base.py
backend/tests/content/: test_guest_conversation.py
backend/tests/setup/: test_setup_install.py
backend/tests/tasks/: test_pipeline.py  test_scheduled.py
devops/: README-GITLAB.md  docker-compose.dev.yml
devops/scripts/: postgres-init.sql
devops/stacks/: estadesdelta.local.yml
devops/varnish/: Dockerfile
docs/: README.md  pyproject.toml
docs/ADRs/: 013-multi-palette-theming.md
docs/docs/: conf.py  glossary.md  index.md
docs/docs/concepts/: index.md
docs/docs/how-to-guides/: index.md
docs/docs/reference/: index.md
docs/docs/tutorials/: index.md
docs/sessions/: 2026-05-11-day1-setup.md  2026-05-11-day2-design-system.md  2026-05-20-day3-routing-map-filters.md
docs/styles/config/vocabularies/Base/: accept.txt
frontend/: .eslintrc.js  Dockerfile  README.md  jest-addon.config.js  mrs.developer.json  package.json  volto.config.js
news/: 1.feature  2.feature  3.feature
